--- a/Registry/View/Schedule/RoomView.xaml
+++ b/Registry/View/Schedule/RoomView.xaml
@@ -3,6 +3,7 @@
                     xmlns:registry="clr-namespace:Registry"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
                     xmlns:core="clr-namespace:Core;assembly=StuffLib"
+                    xmlns:main="clr-namespace:Core;assembly=MainLib"
                     xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity">
     <DataTemplate DataType="{x:Type registry:RoomViewModel}">
         <DataTemplate.Resources>
@@ -23,7 +24,7 @@
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <xctk:TimelinePanel BeginDate="{Binding OpenTime}" EndDate="{Binding CloseTime}" Orientation="Vertical" OverlapBehavior="Stretch"
-                                                        UnitSize="{x:Static core:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static core:Configuration.ScheduleUnitTimeInterval}"/>
+                                                        UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}"/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemContainerStyle>
@@ -46,7 +47,7 @@
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <xctk:TimelinePanel BeginDate="{Binding OpenTime}" EndDate="{Binding CloseTime}" Orientation="Vertical" OverlapBehavior="Stretch"
-                                                        UnitSize="{x:Static core:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static core:Configuration.ScheduleUnitTimeInterval}" />
+                                                        UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemContainerStyle>
