intermediate commit with check errors in EditPersonData (doesn't check commonPersonData items)

--- a/Registry/View/EditPerson/EditPersonView.xaml
+++ b/Registry/View/EditPerson/EditPersonView.xaml
@@ -93,7 +93,7 @@
                                     <StackPanel Grid.Column="1" Margin="3">
                                         <TextBlock Text="{Binding ShortName}"/>
                                         <ComboBox Margin="2" ItemsSource="{Binding DataContext.RelativeRelations, Mode=OneWay, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBox}}}" 
-                                              SelectedValuePath="Id" SelectedValue="{Binding RelativeRelationId}" DisplayMemberPath="Name"/>
+                                              SelectedValuePath="Id" SelectedValue="{Binding RelativeRelationId, ValidatesOnDataErrors=True}" Validation.ErrorTemplate="{DynamicResource ValidationTemplate}" DisplayMemberPath="Name"/>
                                         <stuffLib:CheckBoxExtentions Content="Представитель" IsChecked="{Binding IsRepresentative}" GroupName="PersonRelatives">
                                         </stuffLib:CheckBoxExtentions>
                                     </StackPanel>
