--- a/Registry/View/EditPerson/EditPersonView.xaml
+++ b/Registry/View/EditPerson/EditPersonView.xaml
@@ -61,7 +61,7 @@
                         <Button HorizontalAlignment="Right" ToolTip="Добавить нового родственника" Command="{Binding AddNewPersonToRelativeCommand}">
                             <Image Source="pack://application:,,,/Resources;component/Images/Add24x24.png"/>
                         </Button>
-                        <Button HorizontalAlignment="Right" ToolTip="Убрать из родственников" Command="{Binding RemovePersonFromRelativeCommand}">
+                        <Button HorizontalAlignment="Right" ToolTip="Убрать из родственников" Command="{Binding RemovePersonFromRelativeCommand}" Visibility="{Binding IsNullSelectedRelativeViewModel, Converter={StaticResource booleanToInversedVisibilityConverter}}">
                             <Image Source="pack://application:,,,/Resources;component/Images/Remove24x24.png"/>
                         </Button>
                     </StackPanel>
@@ -83,11 +83,8 @@
                                         <RowDefinition Height="*"/>
                                     </Grid.RowDefinitions>
 
-                                    <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Center" Padding="3" Height="120" Width="100">
-                                        <StackPanel>
-                                            <Image Source="{Binding PhotoUri}"/>
-                                            <TextBlock Height="48">Нажмите, чтобы сделать фото</TextBlock>
-                                        </StackPanel>
+                                    <Border Grid.Column="0" BorderBrush="Black" BorderThickness="1" Margin="2" VerticalAlignment="Center" Height="120" Width="90">
+                                            <Image Source="{Binding PhotoUri}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
                                     </Border>
 
                                     <StackPanel Grid.Column="1" Margin="3">
